Fixed wrong viewheight on mobile. Closes #24

--- a/css/front-page.scss
+++ b/css/front-page.scss
@@ -1,3 +1,11 @@
+@function vh($quantity) {
+    @return calc(var(--vh, 1vh) * #{$quantity});
+}
+
+html {
+    --vh: 1vh;
+}
+
 .wp-block-latest-posts + .wp-block-buttons {
     display: flex;
     justify-content: center;
@@ -18,7 +26,7 @@ div.hyic-button a:visited {
 #top-section {
     display: flex;
     position: relative;
-    height: 100vh;
+    height: vh(100);
     width: 100%;
     // background-color: var(--primary);
     background: linear-gradient(45deg, var(--primary), hsl(147 76% 75% / 1));
@@ -27,7 +35,7 @@ div.hyic-button a:visited {
     .background {
         position: absolute;
         z-index: 1;
-        height: 100vh;
+        height: vh(100);
         width: 100%;
     }
 
@@ -136,8 +144,8 @@ div.hyic-button a:visited {
 @media screen and (max-width: 600px) {
     #top-section {
         .background {
-            height: 70vh;
-            top: 30vh;
+            height: vh(70);
+            top: vh(30);
         }
 
         .text .top {
@@ -162,5 +170,11 @@ div.hyic-button a:visited {
         p {
             margin: 2em 0;
         }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #top-section .text .top h1 {
+        margin-top: 0.45em;
     }
 }
